# 2025-hack-vvo-team-06-dorm-match

./: LICENSE  README.org  docker-compose.yml
backend/: Cargo.toml  entrypoint.sh
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/common/src/config/: env.rs
backend/common/src/models/: application.rs  mod.rs  profile.rs  room.rs  user.rs
backend/common/src/repositories/: application.rs  profile.rs  room.rs  user.rs
backend/common/src/types/: types.rs
backend/common/src/utils/: crypto.rs  jwt.rs
backend/migrations/: 20250425211820_init.up.sql  20250425230004_init.down.sql  20250425230004_init.up.sql
backend/services/auth/: Cargo.toml  Dockerfile
backend/services/auth/src/: main.rs  openapi.rs
backend/services/auth/src/config/: db.rs
backend/services/auth/src/controllers/: auth.rs  verify.rs
backend/services/auth/src/middleware/: jwt.rs
backend/services/auth/src/services/: auth.rs
backend/services/room-management/: Cargo.toml  Dockerfile
backend/services/room-management/src/: main.rs  models.rs  openapi.rs
backend/services/room-management/src/controllers/: rooms.rs
backend/services/room-management/src/services/: matching.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/components/hotel-view-card/: HotelViewCard.jsx
frontend/src/components/hotel-view-card-skeleton/: HotelViewCardSkeleton.jsx
frontend/src/mirage/: mirageServer.js
frontend/src/routes/checkout/: Checkout.jsx
frontend/src/routes/home/: Home.jsx
frontend/src/routes/hotel-details/components/hotel-booking-details-card/: HotelBookingDetailsCard.jsx
frontend/src/routes/register/: Register.jsx
frontend/src/services/: NetworkAdapter.js
