[workspace]
resolver = "2"
members = [
    "common",
    "services/auth",
    "services/room-management",
    # "services/user",
    # "services/room",
    # "services/application",
    # "services/matching",
    # "services/notification",
    # "services/analytics",
]

[workspace.dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
redis = { version = "0.25", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }