[package]
name = "dormmatch-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
dotenv = { workspace = true }
utoipa = { workspace = true }
async-trait = "0.1.88"
serde_json = "1.0.140"
envy = "0.4.2"
