[package]
name = "dormmatch-room-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-web-httpauth = "0.8"
serde = { workspace = true }
serde_json = "1.0"
sqlx = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-rapidoc = "6.0.0"
dormmatch-common = { path = "../../common" }
